跨后端、前端和管理模块实现核心民宿管理、用户功能、推荐、支付和通知。